# soccersim-mcthuggets

./: CMakeLists.txt  README.md  package.xml
launch/: ai_ally1.launch  ai_ally2.launch  ally1.launch  ally2.launch  competition.launch  hw_agnostic.launch  hw_testing.launch  mcthuggets.launch  robot.launch
nodes/ai/: ai_node.py
nodes/controller/: controller_node.py
nodes/estimation/: ball_estimator_node.py  robot_estimator_node.py
