<?xml version="1.0"?>
<package>
  <name>soccersim_mcthuggets</name>
  <version>0.0.0</version>
  <description>The soccersim_mcthuggets package, to be used with soccersim</description>

  <maintainer email="parkerclusk@gmail.com">Parker Lusk</maintainer>
  <author email="parkerclusk@gmail.com">Parker Lusk</author>
  <license>BSD</license>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

</package>